[package]
name = "banner-grabber"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
dns-lookup = "2"
headless_chrome = "1.0.9"
chrono = { version = "0.4", features = ["clock", "serde"] }
openssl = "0.10"
tokio-openssl = "0.6"
url = "2"
wappalyzer = { git = "https://github.com/lst15/wappalyzer.git" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
