[package]
name = "banner-grabber"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["clap", "tracing-subscriber"]
web = ["openssl", "tokio-openssl", "url", "wappalyzer"]
webdriver = ["headless_chrome", "web"]
db = []
mail = []
infra = []

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"], optional = true }
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
async-trait = "0.1"
dns-lookup = "2"
headless_chrome = { version = "1.0.9", optional = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
openssl = { version = "0.10", optional = true }
tokio-openssl = { version = "0.6", optional = true }
url = { version = "2", optional = true }
wappalyzer = { git = "https://github.com/lst15/wappalyzer.git", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
